# vgi-image

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/image-wasm/: Cargo.toml
crates/image-wasm/src/: lib.rs
crates/image-worker/: Cargo.toml
crates/image-worker/examples/: gen_fixtures.rs
crates/image-worker/src/: arrow_io.rs  imaging.rs  lib.rs  main.rs  meta.rs
crates/image-worker/src/scalar/: exif.rs  hash.rs  info.rs  mod.rs  transform.rs  version.rs
crates/image-worker/tests/: exif_gps.rs
test/sql/: exif.test  hash.test  info.test  transform.test
wasm/: build.sh
