[workspace]
resolver = "2"
members = [
    "crates/image-worker",
    "crates/image-wasm",
]
# image-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p image-wasm`.
default-members = ["crates/image-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-image"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by image-wasm; requires rustc 1.97 (see
# rust-version above). Base (feature-less) so each target can opt in: the native
# build takes the SDK's real defaults (`sqlite` + `transport-http`), while the
# wasm build must NOT — tokio/mio/axum and bundled SQLite do not compile for
# wasm32, and the browser transport serves over a byte channel rather than HTTP.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# Image decode / encode / resize. Pinned to 0.25.9 because 0.25.10 bumps the MSRV
# past our rust-version (1.86). Default features (incl. AVIF via the heavy
# ravif/rav1e chain) are off; we enable just the common web/photo formats.
image = { version = "=0.25.9", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "tiff", "webp",
] }
# EXIF metadata parsing (the `exif` crate is published as `kamadak-exif`).
kamadak-exif = "0.6"
# Perceptual hashing (aHash / dHash / pHash via DCT), built on `image`. Pinned to
# 3.0.0 because 3.1.x bumps the MSRV past our rust-version (1.86).
image_hasher = "=3.0.0"

[profile.release]
opt-level = 2
